--- a/test2.html
+++ b/test2.html
@@ -28,14 +28,26 @@
     //   }
     // })
 
-    $('#div1').click(function() {
-      // var _this = this 
-      var fn = function() {
-        $(this).css('background-color', 'yellow')
-      }
-      fn = $.proxy(fn, this)
-      setTimeout(fn, 1000)
+    // $('#div1').click(function() {
+    //   // var _this = this 
+    //   var fn = function() {
+    //     $(this).css('background-color', 'yellow')
+    //   }
+    //   fn = $.proxy(fn, this)
+    //   setTimeout(fn, 1000)
+    // })
+    var callbacks = $.Callbacks()
+    callbacks.add(function(info) {
+      console.log('fn1', info)
     })
+    callbacks.add(function(info) {
+      console.log('fn2', info)
+    })
+    callbacks.add(function(info) {
+      console.log('fn3', info)
+    })
+    callbacks.fire('gogogo')
+    callbacks.fire('fire')
   </script>
 </body>
 </html>
