--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <p>Design Pattern Demo-1</p>
   <p>Design Pattern Demo-2</p>
   <p>Design Pattern Demo-3</p>
+  <hr>
+  <button id="btn1">Collection</button>
 </body>
 </html>
