--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <p>Design Pattern Demo-2</p>
   <p>Design Pattern Demo-3</p>
   <hr>
-  <button id="btn1">Collection</button>
+  <button id="btn1"></button>
 </body>
 </html>
