--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Design Pattern Demo</title>
 </head>
 <body>
-  <p>Design Pattern Demo-1</p>
-  <p>Design Pattern Demo-2</p>
-  <p>Design Pattern Demo-3</p>
+  <div id="app"></div>
+  <script>
+  </script>
 </body>
 </html>
