--- a/inde3.html
+++ b/inde3.html
@@ -8,5 +8,180 @@
 </head>
 <body>
   <h1>Compare two trees for equality</h1>
+  <script>
+    var arr1 = [
+      {
+        id: 1,
+        name: 'zhangsan',
+        age: 21,
+        list: [
+          {
+            subId: 1,
+            subName: 'zhangsaner1',
+            subAge: 19,
+            subLove: 'skat1',
+          },
+          {
+            subId: 2,
+            subName: 'zhangsaner2',
+            subAge: 20,
+            subLove: 'skat2',
+          },
+          {
+            subId: 3,
+            subName: 'zhangsaner3',
+            subAge: 21,
+            subLove: 'skat3',
+          },
+          {
+            subId: 4,
+            subName: 'zhangsaner4',
+            subAge: 25,
+            subLove: 'skat4',
+          }
+        ]
+      },
+      {
+        id: 2,
+        name: 'list',
+        age: 18,
+        list: []
+      },
+      {
+        id: 3,
+        name: 'wanger',
+        age: 23,
+        list: []
+      },
+      {
+        id: 4,
+        name: 'mazi',
+        age: 24,
+        list: []
+      },
+      {
+        id: 5,
+        name: 'zhaoyi',
+        age: 23,
+        list: []
+      }
+    ]
+    var arr2 = [
+      {
+        id: 1,
+        name: 'zhangsan',
+        age: 21,
+        list: [
+          {
+            subId: 1,
+            subName: 'zhangsaner1',
+            subAge: 19,
+            subLove: skat1,
+          },
+          {
+            subId: 2,
+            subName: 'zhangsaner2',
+            subAge: 20,
+            subLove: skat2,
+          },
+          {
+            subId: 3,
+            subName: 'zhangsaner3',
+            subAge: 21,
+            subLove: skat3,
+          },
+          {
+            subId: 4,
+            subName: 'zhangsaner4',
+            subAge: 25,
+            subLove: skat4,
+          }
+        ]
+      },
+      {
+        id: 2,
+        name: 'list',
+        age: 18,
+        list: []
+      },
+      {
+        id: 3,
+        name: 'wanger',
+        age: 23,
+        list: []
+      },
+      {
+        id: 4,
+        name: 'mazi',
+        age: 24,
+        list: []
+      },
+      {
+        id: 5,
+        name: 'zhaoyi',
+        age: 23,
+        list: []
+      }
+    ]
+    var arr3 = [
+      {
+        id: 1,
+        name: 'zhangsan',
+        age: 21,
+        list: [
+          {
+            subId: 1,
+            subName: 'zhangsaner1',
+            subAge: 19,
+            subLove: skat1,
+          },
+          {
+            subId: 2,
+            subName: 'zhangsaner2',
+            subAge: 20,
+            subLove: skat2,
+          },
+          {
+            subId: 3,
+            subName: 'zhangsaner3',
+            subAge: 21,
+            subLove: skat3,
+          },
+          {
+            subId: 4,
+            subName: 'zhangsaner4',
+            subAge: 25,
+            subLove: skat4,
+          }
+        ]
+      },
+      {
+        id: 2,
+        name: 'list',
+        age: 18,
+        list: []
+      },
+      {
+        id: 3,
+        name: 'wanger',
+        age: 23,
+        list: []
+      },
+      {
+        id: 4,
+        name: 'mazi',
+        age: 24,
+        list: []
+      },
+      {
+        id: 5,
+        name: 'zhaoyi',
+        age: 23,
+        list: []
+      }
+    ]  
+  
+  console.log(arr1)
+  </script>
 </body>
 </html>
