--- a/inde3.html
+++ b/inde3.html
@@ -9,7 +9,153 @@
 <body>
   <h1>Compare two trees for equality</h1>
   <script>
+    // old
     var arr1 = [
+      {
+        id: 1,
+        name: 'zhangsan',
+        age: 21,
+        list: [
+          {
+            subId: 1,
+            subName: 'zhangsaner1',
+            subAge: 19,
+            subLove: 'skat1',
+            checked: false
+          },
+          {
+            subId: 2,
+            subName: 'zhangsaner2',
+            subAge: 20,
+            subLove: 'skat2',
+          },
+          {
+            subId: 3,
+            subName: 'zhangsaner3',
+            subAge: 21,
+            subLove: 'skat3',
+            checked: false,
+          },
+          {
+            subId: 4,
+            subName: 'zhangsaner4',
+            subAge: 25,
+            subLove: 'skat4',
+          },
+          {
+            subId: 5,
+            subName: 'zhangsaner5',
+            subAge: 28,
+            subLove: 'skat5'
+          },
+        ]
+      },
+      {
+        id: 2,
+        name: 'list',
+        age: 18,
+        list: [
+         {
+            subId: 6,
+            subName: 'lisi1',
+            subAge: 28,
+            subLove: 'skate1'
+         } 
+        ]
+      },
+      {
+        id: 3,
+        name: 'wanger',
+        age: 23,
+        list: []
+      },
+      {
+        id: 4,
+        name: 'mazi',
+        age: 24,
+        list: [
+          {
+            subId: 7,
+            subName: 'lisi1',
+            subAge: 28,
+            subLove: 'skate1'
+          }
+        ]
+      },
+      {
+        id: 5,
+        name: 'zhaoyi',
+        age: 23,
+        list: []
+      }
+    ]
+    // new1
+    var arr2 = [
+      {
+        id: 1,
+        name: 'zhangsan',
+        age: 21,
+        list: [
+          {
+            subId: 1,
+            subName: 'zhangsaner1',
+            subAge: 19,
+            subLove: "skat1",
+          },
+          {
+            subId: 2,
+            subName: 'zhangsaner2',
+            subAge: 20,
+            subLove: 'skat2',
+          },
+          {
+            subId: 3,
+            subName: 'zhangsaner3',
+            subAge: 21,
+            subLove: 'skat3',
+          },
+          {
+            subId: 4,
+            subName: 'zhangsaner4',
+            subAge: 25,
+            subLove: 'skat4',
+          }
+        ]
+      },
+      {
+        id: 2,
+        name: 'list',
+        age: 18,
+        list: []
+      },
+      {
+        id: 3,
+        name: 'wanger',
+        age: 23,
+        list: [
+          {
+            subId: 1,
+            subName: 'wanger1',
+            subAge: 28,
+            subLove: 'skate1'
+          }
+        ]
+      },
+      {
+        id: 4,
+        name: 'mazi',
+        age: 24,
+        list: []
+      },
+      {
+        id: 5,
+        name: 'zhaoyi',
+        age: 23,
+        list: []
+      }
+    ]
+    // new2
+    var arr3 = [
       {
         id: 1,
         name: 'zhangsan',
@@ -66,7 +212,8 @@
         list: []
       }
     ]
-    var arr2 = [
+
+  var arr4 = [
       {
         id: 1,
         name: 'zhangsan',
@@ -76,82 +223,25 @@
             subId: 1,
             subName: 'zhangsaner1',
             subAge: 19,
-            subLove: skat1,
+            subLove: 'skat1',
           },
           {
             subId: 2,
             subName: 'zhangsaner2',
             subAge: 20,
-            subLove: skat2,
+            subLove: 'skat2',
           },
           {
             subId: 3,
             subName: 'zhangsaner3',
             subAge: 21,
-            subLove: skat3,
+            subLove: 'skat3',
           },
           {
             subId: 4,
             subName: 'zhangsaner4',
             subAge: 25,
-            subLove: skat4,
-          }
-        ]
-      },
-      {
-        id: 2,
-        name: 'list',
-        age: 18,
-        list: []
-      },
-      {
-        id: 3,
-        name: 'wanger',
-        age: 23,
-        list: []
-      },
-      {
-        id: 4,
-        name: 'mazi',
-        age: 24,
-        list: []
-      },
-      {
-        id: 5,
-        name: 'zhaoyi',
-        age: 23,
-        list: []
-      }
-    ]
-    var arr3 = [
-      {
-        id: 1,
-        name: 'zhangsan',
-        age: 21,
-        list: [
-          {
-            subId: 1,
-            subName: 'zhangsaner1',
-            subAge: 19,
-            subLove: skat1,
-          },
-          {
-            subId: 2,
-            subName: 'zhangsaner2',
-            subAge: 20,
-            subLove: skat2,
-          },
-          {
-            subId: 3,
-            subName: 'zhangsaner3',
-            subAge: 21,
-            subLove: skat3,
-          },
-          {
-            subId: 4,
-            subName: 'zhangsaner4',
-            subAge: 25,
-            subLove: skat4,
+            subLove: 'skat4',
           }
         ]
       },
@@ -180,8 +270,65 @@
         list: []
       }
     ]  
-  
-  console.log(arr1)
+
+    // update have a some data
+    var selected = [1, 3, 4]
+
+    var mark = []
+    arr2.map(item => {
+    item.list.map(childItem => {
+      if(selected.includes(childItem.subId)) {
+        childItem.selected = true
+        mark.push(childItem.subId)
+      } else {
+        childItem.selected = false
+      }
+    })
+  })
+
+  console.log(arr2, 'end value', mark)
+
+  // two equality
+  var flag = []
+  var mark = []
+  // 1
+  arr4.map(item => {
+    arr3.map(mainItem => {
+      if(mainItem.id === item.id) {
+        flag.push(true)
+      }
+    })
+  })
+  // 2
+  arr4.map(item => {
+    item.list.map(childItem => {
+      arr3.map(mainItem => {
+        mainItem.list.map(mainChildItem => {
+          if(mainChildItem.subId === childItem.subId) {
+            mark.push(true)
+          }
+        })
+      })
+    })
+  })
+
+  // summry
+  var len3 = arr3.length
+  var len4 = arr4.length
+  var sumbLen3 = 0
+  var sumbLen4 = 0
+  arr3.map(item => {
+    sumbLen3 += item.list.length
+  })
+  arr4.map(item => {
+    sumbLen4 += item.list.length
+  })
+
+  if(len3 === len4 && sumbLen3 === sumbLen4 ) {
+    console.log('arr3 equality arr4')
+  }
+
+  console.log(flag, mark)
   </script>
 </body>
 </html>
